--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a,
+a:visited,
+a:focus {
+  color: inherit;
+  text-decoration: none;
 }
