--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,13 @@ body {
   font-family: "Antic", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #333;
+  line-height: 1.5;
 }
 * {
   box-sizing: border-box;
 }
+
 a,
 a:visited,
 a:focus {
@@ -16,4 +19,8 @@ a:focus {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Maven Pro", sans-serif;
+}
+
+p {
+  font-size: 16px;
 }
