--- a/src/components/Services/Service/Service.module.css
+++ b/src/components/Services/Service/Service.module.css
@@ -10,7 +10,6 @@
     height: 100%;
     position: relative;
     overflow: hidden;
-    color: #C0C0C0;
     display: flex;
 }
 
@@ -21,13 +20,15 @@
     margin: 0;
     padding: 0;
     font-size: 6em;
-    left: -35px;
+    left: -40px;
+    color: #C0C0C0;
     transition: all 500ms ease-in-out;
 }
 
 .ServiceItem:hover  .ServiceNumber h1 {
     left: -20px;
     cursor: default;
+    color: rgb(78, 78, 78);
 }
 
 .ServiceItem .Service {
