--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -2,16 +2,15 @@
     position: relative;
     max-width: 1140px;
     margin: 50px auto;
+    padding: 20px;
     color: rgb(51, 51, 51);
     /* border: 2px solid green; */
 }
-
 .Hero:after {
     content: '';
     display: table;
     clear: both;
 }
-
 .Hero .Slogan {
     position: absolute;
     top: 50px;
@@ -29,7 +28,6 @@
     text-transform: uppercase;
     font-family: "Maven Pro", sans-serif;
     font-size: 4em;
-
 }
 .Hero .SocialMedia {
     border: 5px solid rgb(70, 70, 70);
@@ -39,26 +37,60 @@
     display: flex;
     justify-content: flex-end;
 }
-
 .SocialMedia ul {
     list-style: none;
     padding: 0 20px;
     margin: 0;
 }
-
 .SocialMedia li {
     margin-bottom: 15px;
 }
-
 .SocialMedia li:hover {
     color: #000;
 }
-
 .SocialMedia a {
     font-size: 30px;
 }
-
-
 .cursive {
     font-family: "Dancing Script", cursive;
+}
+
+@media only screen and (max-width: 768px){
+    .Hero {
+        margin: 0 auto;
+    }
+    .Hero .Slogan h2:nth-child(1){
+        font-size: 3em;
+    }
+    .Hero .Slogan h2:nth-child(2){
+        font-size: 2em;
+    }
+    .SocialMedia li {
+        margin-bottom: 0;
+    }
+    .SocialMedia a {
+        line-height: 0;
+        font-size: 25px;
+    }
+}
+
+@media only screen and (max-width: 425px){
+    .Hero .Slogan h2:nth-child(1){
+        font-size: 2em;
+    }
+    .Hero .Slogan h2:nth-child(2){
+        font-size: 1em;
+    }
+    .Hero .SocialMedia {
+        justify-content: center;
+        align-items: flex-end;
+        padding: 20px;
+        height: 200px;
+    }
+    .SocialMedia ul {
+        display: flex;
+    }
+    .SocialMedia ul li {
+        margin-right: 10px;
+    }
 }
