--- a/src/components/Portfolio/PortfolioItem/PortfolioItem.module.css
+++ b/src/components/Portfolio/PortfolioItem/PortfolioItem.module.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-.PortfolioItem div {
+.PortfolioItem div { 
     height: 100%;
     width: 100%;
     background-size: cover !important;
@@ -33,12 +33,26 @@
     box-shadow: none;
 }
 
-@keyframes shadow {
-    from {box-shadow: inset 0px 0px 21px -3px rgba(61, 61, 61, 0.7);}
-    to {box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);}
-}
 .PortfolioItem div a {
     display: block;
     height: 100%;
     width: 100%
+}
+
+@media only screen and (max-width: 768px){
+    .PortfolioItem {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 425px){
+    .PortfolioItem {
+        width: 100%;
+        padding: 5px 0;
+    }
+
+    .PortfolioItem:nth-child(5),
+    .PortfolioItem:nth-child(6){
+        display: none;
+    }
 }
