--- a/src/components/Header/SideDrawer/SideDrawer.module.css
+++ b/src/components/Header/SideDrawer/SideDrawer.module.css
@@ -8,7 +8,7 @@
     height: 100%;
     width: 100%;
     transition: all 1s ease-in-out;
-    background: rgba(0, 0, 0, 0.698);
+    background-color: transparent;
     color: #fff;
     z-index: 100;
 }
@@ -22,7 +22,26 @@
 .SideDrawer ul {
     list-style: none;
     padding: 20px;
-    background: #000;
+    background: rgba(39, 39, 39, 0.911);
+    width: 70%;
+    border: 1px solid #000;
+}
+
+
+.SideDrawer ul li {
+    margin: 10px;
+}
+
+.SideDrawer ul li a {
+    display: inline-block;
+    padding-left: 10px;
+    font-size: 1.3em;
+}
+
+.active {
+    font-weight: bold;
+    letter-spacing: 2px;
+    border-left: 3px solid #fff;
 }
 
 
