--- a/src/components/UI/Overlay/Overlay.module.css
+++ b/src/components/UI/Overlay/Overlay.module.css
@@ -4,6 +4,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0, .5);
+    background: rgb(131, 131, 131);
     z-index: -1;
+
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
