Added the scroll to functionality on nav items and the fixed side nav for bigger screens

--- a/src/components/Header/Nav/Nav.module.css
+++ b/src/components/Header/Nav/Nav.module.css
@@ -30,6 +30,8 @@
     text-transform: uppercase;
     position: relative;
     letter-spacing: 1px;
+    transition: all 500ms ease-in-out;
+    cursor: pointer;
 }
 .Nav li:hover a {
     font-weight: bold;
