--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,6 +11,7 @@
 
 .Footer .FooterSections {
     display: flex;
+    position: relative;
 }
 
 .Footer .FooterSections > div {
@@ -42,6 +43,7 @@
 .lastRow p:first-child {
     font-size: .9em;
 }
+
 
 @media only screen and (max-width: 425px){
     .Footer .FooterSections {
