--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,30 @@
 .Header {
     /* border: 1px solid black; */
+
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 200;
+
+    border-bottom: 1px solid rgba(51, 51, 51, 0.198);
+
+}
+
+.HeaderContainer {
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: rgb(51, 51, 51);
 
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 200;
+
+    color: rgb(51, 51, 51);
     max-width: 1140px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 .Header:hover {
