--- a/src/components/UI/BurgerIcon/BurgerIcon.module.css
+++ b/src/components/UI/BurgerIcon/BurgerIcon.module.css
@@ -3,10 +3,12 @@
     flex-direction: column;
     width: 40px;
     cursor: pointer;
+    transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .Mobile {
     display: none;
+    margin-right: 10px;
 }
 
 @media only screen and (max-width: 768px){
