--- a/src/components/UI/Overlay/Overlay.module.css
+++ b/src/components/UI/Overlay/Overlay.module.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(131, 131, 131);
+    background: rgba(0, 0, 0, 0.589);
     z-index: -1;
 
     background-size: cover;
