--- a/src/components/Footer/SocialMedia/SocialMedia.module.css
+++ b/src/components/Footer/SocialMedia/SocialMedia.module.css
@@ -1,9 +1,11 @@
 .SocialMedia {
     padding: 20px;
+    padding-top:25px;
 }
 
 .SocialMedia p {
     margin: 0;
+    margin-top: 10px;
     margin-bottom: 1rem;
 }
 
