--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -37,7 +37,42 @@
     /* border: 1px solid black; */
     display: flex;
     position: absolute;
-    transition: all ease-in-out 1000ms; 
+    transition: all ease-in-out 1000ms;
+}
+
+/* Slide next and prev buttons */
+.slideButtons div.next,
+.slideButtons div.prev {
+    font-size: 35px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 20%;
+    opacity: .5;
+    cursor: pointer;
+    z-index: 100;
+    transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+.slideButtons div.next:hover,
+.slideButtons div.prev:hover {
+    opacity: 1;
+}
+.slideButtons div.next {
+    right: 0;
+    justify-content: flex-end;
+}
+.slideButtons div.prev {
+    justify-content: flex-start;
+}
+.slideButtons div.next span {
+    margin-right: 20%;
+    z-index: -1;
+}
+
+.slideButtons div.prev span{
+    margin-left: 20%;
+    z-index: -1;
 }
 
 @media only screen and (max-width: 425px){
