--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,6 +6,34 @@
     color: rgb(51, 51, 51);
     /* border: 2px solid green; */
 }
+
+.Hero img.pattern {
+    position: absolute;
+    z-index: -1;
+    opacity: .07;
+}
+
+.Hero img.pattern:nth-child(1) {
+    bottom: -1000px;
+    left: -200px;
+    
+}
+
+.Hero img.pattern:nth-child(2) {
+    bottom: -2000px;
+    left: 100px;
+}
+
+.Hero img.pattern:nth-child(3) {
+    bottom: -1500px;
+    right: -100px;
+}
+
+.Hero img.pattern:nth-child(4) {
+    bottom: -2500px;
+    right: 300px;
+}
+
 .Hero:after {
     content: '';
     display: table;
