Fixed the scrolling of the page caused by the background images, also added some gradient to the slide

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -5,6 +5,12 @@
     padding: 20px;
     color: rgb(51, 51, 51);
     /* border: 2px solid green; */
+    /* overflow-x: hidden; */
+}
+
+.imagePatterns {
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .Hero img.pattern {
