--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #333;
   line-height: 1.5;
+  width: 100%;
 }
 * {
   box-sizing: border-box;
