added the gallery in the portfolio page

--- a/src/components/Navigation/FooterNav/FooterNav.module.css
+++ b/src/components/Navigation/FooterNav/FooterNav.module.css
@@ -28,3 +28,9 @@
 .FooterNav ul li a.active {
     font-weight: bold;
 }
+
+@media only screen and (max-width: 425px) {
+    .FooterNav {
+        display: none;
+    }
+}
