--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,6 +5,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+  border: 1px solid green;
 }
   
 .aboutUsContainer .backgroundImage {
