--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,7 +5,6 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  border: 1px solid green;
 }
   
 .aboutUsContainer .backgroundImage {
@@ -21,6 +20,7 @@
 }
 
 .aboutUsContainer .content {
+  position: relative;
   padding: 2vw;
   width: 40%;
   height: auto;
