--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -20,13 +20,14 @@
 .Hero .Slogan h2 {
     margin: 0;
     font-weight: bold;
+    text-decoration: none;
 }
-.Hero .Slogan h2:nth-child(1){
+.Hero .Slogan h2:nth-child(1) {
     font-size: 5em;
 }
-.Hero .Slogan h2:nth-child(2){
+.Hero .Slogan h2:nth-child(2) {
     text-transform: uppercase;
-    font-family: "Maven Pro", sans-serif;
+    font-family: 'Maven Pro', sans-serif;
     font-size: 4em;
 }
 .Hero .SocialMedia {
@@ -52,17 +53,17 @@
     font-size: 30px;
 }
 .cursive {
-    font-family: "Dancing Script", cursive;
+    font-family: 'Dancing Script', cursive;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
     .Hero {
         margin: 0 auto;
     }
-    .Hero .Slogan h2:nth-child(1){
+    .Hero .Slogan h2:nth-child(1) {
         font-size: 3em;
     }
-    .Hero .Slogan h2:nth-child(2){
+    .Hero .Slogan h2:nth-child(2) {
         font-size: 2em;
     }
     .SocialMedia li {
@@ -74,11 +75,11 @@
     }
 }
 
-@media only screen and (max-width: 425px){
-    .Hero .Slogan h2:nth-child(1){
+@media only screen and (max-width: 425px) {
+    .Hero .Slogan h2:nth-child(1) {
         font-size: 2.5em;
     }
-    .Hero .Slogan h2:nth-child(2){
+    .Hero .Slogan h2:nth-child(2) {
         font-size: 2em;
     }
     .Hero .SocialMedia {
