--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,33 @@
 body {
-  margin: 0;
-  font-family: "Antic", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #333;
-  line-height: 1.5;
-  width: 100%;
+    margin: 0;
+    font-family: 'Antic', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #333;
+    line-height: 1.5;
+    width: 100%;
 }
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    text-decoration: none !important;
 }
 
 a,
 a:visited,
 a:focus {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Maven Pro", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Maven Pro', sans-serif;
 }
 
 p {
-  font-size: 16px;
+    font-size: 16px;
 }
