--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,6 +11,7 @@
 
 .Footer .FooterSections {
     display: flex;
+    justify-content: center;
     position: relative;
 }
 
@@ -41,10 +42,10 @@
 }
 
 .lastRow p:first-child {
-    font-size: .9em;
+    font-size: 0.9em;
 }
 
-@media only screen and (max-width: 425px){
+@media only screen and (max-width: 425px) {
     .Footer .FooterSections {
         flex-wrap: wrap;
     }
@@ -53,7 +54,7 @@
     }
 
     .lastRow p:first-child {
-        font-size: .75em;
-        letter-spacing: 1px;;
+        font-size: 0.75em;
+        letter-spacing: 1px;
     }
 }
