--- a/src/components/Navigation/FooterNav/FooterNav.module.css
+++ b/src/components/Navigation/FooterNav/FooterNav.module.css
@@ -1,36 +1,25 @@
 .FooterNav {
-    /* border: 1px solid green; */
     margin: 0 auto;
-    padding: 10px;
-    overflow-x: hidden;
-    border-top: 1px solid rgba(51, 51, 51, 0.37);
+    padding: 20px;
 }
 
-.FooterNav ul{
+.FooterNav ul {
     /* border: 1px solid red; */
     margin: 0;
     padding: 0;
     list-style: none;
     display: flex;
     justify-content: center;
-}
-.FooterNav ul li {
-    margin: 0 10px;
+    flex-direction: column;
 }
 
 .FooterNav ul li a {
     cursor: pointer;
     text-transform: uppercase;
-    font-size: .9em;
+    font-size: 0.9em;
 }
 
-.FooterNav ul li a:hover ,
+.FooterNav ul li a:hover,
 .FooterNav ul li a.active {
     font-weight: bold;
-}
-
-@media only screen and (max-width: 425px) {
-    .FooterNav {
-        display: none;
-    }
 }
