--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,37 +1,38 @@
 /* About us */
 
 .aboutUsContainer {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
 }
-  
-.aboutUsContainer .backgroundImage {
-  background: #000 url(../../assets/images/background.jpg) no-repeat fixed center;
-  background-size: cover;
-  position: absolute;
-  top: 10%;
-  left: 0;
-  z-index: -1;
-  height: 80%;
-  width: 100%;
-  box-shadow: inset 0px 0px 21px -3px rgba(61, 61, 61, 0.7);
+
+.backgroundImage {
+    background: #000 url(../../assets/images/background.jpg) no-repeat fixed
+        center center;
+    background-size: cover;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    z-index: -1;
+    height: 80%;
+    width: 100%;
+    box-shadow: inset 0px 0px 21px -3px rgba(61, 61, 61, 0.7);
 }
 
 .aboutUsContainer .content {
-  position: relative;
-  padding: 2vw;
-  width: 40%;
-  height: auto;
-  margin-right: 10%;
-  background: #333;
-  color: #F5F5DC;
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+    position: relative;
+    padding: 2vw;
+    width: 40%;
+    height: auto;
+    margin-right: 10%;
+    background: #333;
+    color: #f5f5dc;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
 
 .aboutUsContainer .content h5 {
-  font-size: 0.9em;
+    font-size: 0.9em;
 }
 
 .aboutUsContainer .content h1 {
@@ -39,32 +40,33 @@
 }
 
 .aboutUsContainer .content p {
-  font-weight: 100;
-  letter-spacing: 1px;
-  font-size: 0.95em;
-  line-height: 25px;
+    font-weight: 100;
+    letter-spacing: 1px;
+    font-size: 0.95em;
+    line-height: 25px;
 }
 
 .lineThrough {
     text-decoration: line-through;
 }
-  
+
 @media only screen and (max-width: 768px) {
-  .aboutUsContainer .content {
-    width: 60%;
-    padding: 20px;
-  }
+    .aboutUsContainer .content {
+        width: 60%;
+        padding: 20px;
+    }
 }
 
 @media only screen and (max-width: 425px) {
-  .aboutUsContainer .content {
-    width: 100%;
-    margin: 0;
-    background: rgba(51, 51, 51, 0.918);
-  }
+    .aboutUsContainer .content {
+        width: 100%;
+        margin: 0;
+        background: rgba(51, 51, 51, 0.918);
+    }
 
-  .aboutUsContainer .backgroundImage {
-    height: 100%;
-    top: 0;
-  }
+    .aboutUsContainer .backgroundImage {
+        height: 100%;
+        top: 0;
+        background-attachment: initial;
+    }
 }
