--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -18,5 +18,6 @@
 @media only screen and (max-width: 768px) {
     .ContactContainer {
         background-attachment: initial;
+        background-size: auto 100%;
     }
 }
