--- a/src/components/Contact/ContactForm/ContactForm.module.css
+++ b/src/components/Contact/ContactForm/ContactForm.module.css
@@ -4,7 +4,7 @@
     background: rgba(255, 255, 255, 0.904);
     padding: 40px 30px;
     margin: 40px 0px;
-    box-shadow: 6px 17px 84px rgba(0,0,0, 0.50);
+    box-shadow: 6px 17px 84px rgba(0, 0, 0, 0.5);
 }
 
 .ContactFormContainer h1 {
@@ -15,20 +15,4 @@
     text-align: right;
     height: 43px;
     padding-top: 10px;
-}
-.Send {
-    padding: 7px 30px;
-    font-size: 1em;
-    border: 1px solid #C0C0C0;
-    cursor: pointer;
-    transition: all 300ms ease-in-out;
-    outline: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-}
-
-.Send:hover {
-    background: #333;
-    color: #fff;
-    border: #333;
 }
