--- a/src/components/Portfolio/PortfolioItem/PortfolioItem.module.css
+++ b/src/components/Portfolio/PortfolioItem/PortfolioItem.module.css
@@ -5,7 +5,8 @@
     box-sizing: border-box;
 }
 
-.PortfolioItem div { 
+.PortfolioItem div {
+    position: relative;
     height: 100%;
     width: 100%;
     background-size: cover !important;
@@ -13,11 +14,6 @@
     background-repeat: no-repeat;
     background-size: auto;
     border: 1px solid rgb(116, 116, 116);
-
-    /* shadow */
-    /* -webkit-box-shadow: inset 0px 0px 21px -3px rgba(61, 61, 61, 0.7);
-    -moz-box-shadow: inset 0px 0px 21px -3px rgba(61, 61, 61, 0.7);
-    box-shadow: inset 0px 0px 21px -3px rgba(105, 105, 105, 0.7); */
 
     /* animate */
     -webkit-transition: all 500ms ease-in-out;
@@ -27,32 +23,26 @@
     transition: all 500ms ease-in-out !important;
 }
 
-.PortfolioItem div:hover {
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-}
-
 .PortfolioItem div a {
     display: block;
     height: 100%;
-    width: 100%
+    width: 100%;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
     .PortfolioItem {
         width: 50%;
     }
 }
 
-@media only screen and (max-width: 425px){
+@media only screen and (max-width: 425px) {
     .PortfolioItem {
         width: 100%;
         padding: 5px 0;
     }
 
     .PortfolioItem:nth-child(5),
-    .PortfolioItem:nth-child(6){
+    .PortfolioItem:nth-child(6) {
         display: none;
     }
 }
