Add green border for text input when validated

--- a/src/components/UI/FormFields/TextInput/TextInput.module.scss
+++ b/src/components/UI/FormFields/TextInput/TextInput.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../Variables.scss';
+
 .FormGroup {
     width: 100%;
     display: flex;
@@ -37,15 +39,21 @@
         font-weight: bold;
     }
     .FewCharsRemaining {
-        color: red;
+        color: $warning-color;
     }
 }
 
 .Error {
     input {
-        border-color: red;
+        border-color: $warning-color;
     }
     .ErrorMsgContainer {
-        color: red;
+        color: $warning-color;
+    }
+}
+
+.Acceptable {
+    input {
+        border-color: $accepted-color;
     }
 }
