--- a/src/components/UI/FormFields/TextInput/TextInput.module.scss
+++ b/src/components/UI/FormFields/TextInput/TextInput.module.scss
@@ -8,7 +8,7 @@
     margin-bottom: 10px;
     position: relative;
     label {
-        margin: 0;
+        margin: 0 0 0 1rem;
         text-transform: uppercase;
         font-size: 0.8em;
         font-weight: bold;
@@ -26,8 +26,13 @@
     }
     .ErrorMsgContainer {
         min-height: 30px;
-        padding: 0;
+        padding: 0 0 0 1rem;
         margin: 0;
+        span {
+            font-size: 0.8em;
+            font-weight: bold;
+            letter-spacing: 0.07em;
+        }
     }
     .CharsRemaining {
         position: absolute;
