--- a/src/components/UI/FormFields/EmailInput/EmailInput.module.scss
+++ b/src/components/UI/FormFields/EmailInput/EmailInput.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     font-size: 1.2em;
+    margin-bottom: 10px;
     position: relative;
     label {
         margin: 0 0 0 1rem;
