--- a/src/components/Contact/ContactForm/ContactForm.module.scss
+++ b/src/components/Contact/ContactForm/ContactForm.module.scss
@@ -9,16 +9,7 @@
     margin: 40px 0px;
     box-shadow: 6px 17px 84px rgba(0, 0, 0, 0.5);
     h1 {
-        margin: 0;
-    }
-    .ErrorMsgContainer {
-        height: 25px;
-        padding-left: 1rem;
-        small {
-            font-weight: bold;
-            color: $warning-color;
-            font-size: 1em;
-        }
+        margin: 0 0 .3em 0;
     }
     &:before {
         content: 'Your message was sent, I will get back to you soon. :)';
@@ -39,6 +30,8 @@
         color: #333;
         background-color: #fff;
     }
+
+    // When the class .sent is added animate :before to show message
     &.sent {
         &:before {
             animation: sent 1500ms ease-in-out;
@@ -46,13 +39,48 @@
             display: flex;
         }
     }
+
+    form {
+        .InputFieldGroup {
+            width: 100%;
+            padding: 0;
+            label {
+                display: block;
+                margin: 0 0 0 1rem;
+                text-transform: uppercase;
+            }
+            input, textarea {
+                vertical-align: bottom;
+                width: 100%;
+                resize: none;
+                padding: 7px;
+                border: 1px solid #c0c0c0;
+                outline: none;
+                letter-spacing: 1px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            .ErrorMsg {
+                min-height: 30px;
+                color: rgb(180, 0, 0);
+                font-weight: bold;
+                padding: 0 20px 0 0;
+                text-align: right;
+                margin: 0;
+                span {
+                    display: block;
+                }
+            }
+        }
+    }
+
+    .SendBtnContainer {
+        height: 43px;
+        position: relative;
+        left: -4px;
+    }
 }
 
-.SendBtnContainer {
-    text-align: right;
-    height: 43px;
-    padding-top: 10px;
-}
+
 
 @keyframes sent {
     0% {
