--- a/src/components/Contact/ContactForm/ContactForm.module.scss
+++ b/src/components/Contact/ContactForm/ContactForm.module.scss
@@ -11,6 +11,45 @@
     h1 {
         margin: 0 0 .3em 0;
     }
+    .SendErrorMsg {
+        position: absolute;
+        z-index: 100;
+        height: 100%;
+        width: 100%;
+        align-items: center;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        right: 0;
+        display: none;
+        &.Show {
+            display: flex;
+        }
+        button {
+            display: inline-block;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            border: none;
+            outline: none;
+            background: transparent;
+            font-size: 2rem;
+            opacity: 0;
+        }
+        div {
+            background: $theme-white;
+            text-align: center;
+            padding: 2rem;
+            width: 80%;
+            margin: 0 auto;
+            box-shadow: 6px 10px 10px rgba(0, 0, 0, 0.5);
+            h2 {
+                font-size: 25px;
+                
+                color: $warning-color;
+            }
+        }
+    }
     &:before {
         content: 'Your message was sent, I will get back to you soon. :)';
         justify-content: center;
